--- a/css/redirect-overlay-nav-20140702._V348573361_/redirect-overlay-nav-20140702._V348573361_-9.4.css
+++ b/css/redirect-overlay-nav-20140702._V348573361_/redirect-overlay-nav-20140702._V348573361_-9.4.css
@@ -319,3 +319,36 @@
     .redir-ol-content-secondary-text {
       font-size: 14px;
     }
+
+    .redir-ol-content-text-CA {
+      font-size: 21px;
+      line-height: 1.3;
+      margin-top: 50px;
+      margin-bottom: 30px;
+      text-rendering: optimizelegibility;
+    }
+    .redir-ol-content-opt-out-CA {
+      color: #666666;
+      margin-top: 1px;
+      font-size: 12px;
+      line-height: 1.5;
+    }
+    .redir-ol-content-logo-CA{
+      float:left;
+      width:15%;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+    .redir-ol-content-heading-CA{
+      font-weight: bold;
+      font-size: 18px;
+      float:left;
+      width:85%;
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+    .redir-title-text-CA {
+      float: left;
+      font-size: 14px;
+      font-weight: normal;
+    }
